<package>
  <name>geometry2</name>
  <version>0.7.6-dev</version>
  <description>
    A metapackage to bring in the default packages second generation Transform Library in ros, tf2.
  </description>
  <author>Tully Foote</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/geometry2</url>
    
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend version_eq="0.7.6-dev">tf2</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_bullet</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_eigen</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_geometry_msgs</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_kdl</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_msgs</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_py</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_ros</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_sensor_msgs</run_depend>
  <run_depend version_eq="0.7.6-dev">tf2_tools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
