<?xml version="1.0"?>
<package format="2">
  <name>geometry2</name>
  <version>0.7.6</version>
  <description>
    A metapackage to bring in the default packages second generation Transform Library in ros, tf2.
  </description>
  <author>Tully Foote</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/geometry2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="0.7.665" version_lte="0.7.667">tf2</depend>
  <depend>tf2_bullet</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_py</depend>
  <depend version_gte="0.7.665" version_lte="0.7.667">tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_tools</depend>

  <export>
    <metapackage/>
  </export>
</package>
