<?xml version="1.0"?>
<package format="2">
  <name>tf2_ros</name>
  <version>0.7.666</version>
  <description>
    This package contains the ROS bindings for the tf2 library, for both Python and C++.
  </description>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend version_gte="1.11.1">message_filters</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>rosgraph</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend version_gte="0.7.665" version_lte="0.7.667">tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_py</depend>
  <depend>xmlrpcpp</depend>

  <test_depend>rostest</test_depend>
</package>
